--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ Thumbs.db
 
 # Android Studio
 .idea
+.idea/
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
 build/
 .gradle/
+app/app.iml
