--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 .gradle
+.gradle/
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
+.idea/
+.idea
+app/app.iml
+CollegeApp.iml
