--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,20 @@
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
+build
 build/
 .idea/
 .idea
-/app/app.iml
-/CollegeApp.iml
-/gradlew
-/build.gradle
-/settings.gradle
-/gradlew
-/gradlew.bat
-/gradle.properties
-/gen/
-/app/build
-/app/proguard-rules.pro
+app/app.iml
+app/app.iml
+CollegeApp.iml
+gradlew
+build.gradle
+settings.gradle
+gradlew
+gradlew.bat
+gradle.properties
+gen
+gen/
+app/build
+app/proguard-rules.pro
