--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.techhab.collegeapp" >
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:name=".CollegeApplication"
         android:allowBackup="true"
@@ -24,6 +26,10 @@
         <activity
             android:name=".InfoActivity"
             android:label="@string/title_activity_info" >
+        </activity>
+        <activity
+            android:name=".CafeteriaActivity"
+            android:label="@string/title_activity_cafeteria" >
         </activity>
     </application>
 
