--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Test" >
+        android:theme="@style/Theme.KZOO" >
 
         <meta-data
             android:name="com.google.android.gms.version"
