--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,13 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name="com.techhab.collegeapp.CollegeApplication"
+        android:name=".application.CollegeApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.KZOO" >
+
+        <service android:name="com.techhab.collegeapp.rss.RssService" />
 
         <meta-data
             android:name="com.google.android.gms.version"
