updated cafeteria activity and calendar fragment
updated cafeteria activity and calendar fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,7 +100,10 @@
             android:name="com.techhab.collegeapp.CafeteriaActivity"
             android:label="@string/title_activity_cafeteria" >
         </activity>
-
+        <activity
+            android:name="com.techhab.collegeapp.TermActivity"
+            android:label=" " >
+        </activity>
 
     </application>
 
