--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,7 +102,10 @@
         </activity>
         <activity
             android:name="com.techhab.collegeapp.TermActivity"
-            android:label=" " >
+            android:label="@string/title_activity_term" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.techhab.collegeapp.AcademicActivity" />
         </activity>
 
     </application>
