Finally got the gender switch to appear neutral and not 'on'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
         </activity>
         <activity
             android:name="com.techhab.collegeapp.AthleticActivity"
+            android:theme="@style/Theme.NeutralSwitchStyle"
             android:label="@string/title_activity_athletic" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
