--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,12 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:recyclerview-v7:21.0.2'
     compile 'com.android.support:cardview-v7:21.0.2'
     compile 'com.afollestad:material-dialogs:0.4.3'
+    compile 'com.rengwuxian.materialedittext:library:1.7.1'
     compile project(':rss')
 }
