--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         <service
             android:name="com.techhab.rss.EventsRssService"
             android:exported="false" />
+        <service android:name="com.techhab.rss.SportsRssService"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.gms.version"
