--- a/eventdialogbuilder/build.gradle
+++ b/eventdialogbuilder/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.0.2'
+    buildToolsVersion "21.0.2"
 
     defaultConfig {
-        applicationId "com.techhab.collegeapp"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
@@ -17,20 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/com.techhab.collegeapp'] } }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.google.android.gms:play-services:6.5.87'
-    compile 'com.android.support:recyclerview-v7:21.0.2'
-    compile 'com.android.support:cardview-v7:21.0.2'
+    compile 'com.android.support:support-v13:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
     compile 'com.afollestad:material-dialogs:0.4.3'
-    compile 'com.rengwuxian.materialedittext:library:1.7.1'
     compile 'org.jsoup:jsoup:1.8.1'
-    compile project(':eventdialogbuilder')
-    compile project(':rss')
     compile files('libs/gradle-bintray-plugin-1.0.jar')
 }
