--- a/rss/build.gradle
+++ b/rss/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:support-v13:21.0.3'
+    compile 'org.jsoup:jsoup:1.8.1'
+    compile project(':kcollegecustomviews')
 }
