--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':rss', ':eventdialogbuilder', ':kcollegecustomviews', ':gradle-bintray-plugin-1.0'
+include ':app', ':rss', ':kcollegecustomviews', ':gradle-bintray-plugin-1.0'
