--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.afollestad:material-dialogs:0.6.1.2'
     compile 'com.rengwuxian.materialedittext:library:1.7.1'
     compile 'org.jsoup:jsoup:1.8.1'
+    compile 'com.squareup.picasso:picasso:2.4.0'
     compile project(':kcollegecustomviews')
     compile project(':rss')
     compile project(':gradle-bintray-plugin-1.0')
