--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     compile 'com.rengwuxian.materialedittext:library:1.7.1'
     compile 'org.jsoup:jsoup:1.8.1'
     compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.balysv:material-ripple:1.0.1'
+    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.0.1'
+    compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.0.1'
+    compile 'com.github.gabrielemariotti.cards:cardslib-recyclerview:2.0.1'
     compile project(':kcollegecustomviews')
     compile project(':rss')
     compile project(':gradle-bintray-plugin-1.0')
