--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.github.gabrielemariotti.cards:cardslib-core:2.0.1'
     compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.0.1'
     compile 'com.github.gabrielemariotti.cards:cardslib-recyclerview:2.0.1'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile project(':kcollegecustomviews')
     compile project(':rss')
     compile project(':gradle-bintray-plugin-1.0')
